--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
 
     <main>
         <h1>Welcome Cedarville Out</h1>
-        <p>What is Cedarville Out?
-We are gay, lesbian, bisexual, or transgendered (GLBT) alumni of Cedarville University. We are straight alumni who support our GLBT friends. And we are bound together in our belief that everyone's sexuality is a precious gift from God.
-
-Why is Cedarville Out here?
-We are here to to provide a welcoming place for current students, alumni, or faculty/staff (current and former) who have questions about their sexual orientation.
-We are here to unite GLBT and allied alumni in mutual support and friendship.
-We are hear to bear witness to the joy in our lives.</p>
+        <p>What is Cedarville Out?</p>
     </main>
 
     <footer>
