--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     </header>
 
     <main>
-        <h1>About Us</h1>
-        <p>This page contains information about our website.</p>
+        <h1>Stories</h1>
+        <p>Sometimes the best support we can give is just the message that it gets better, that things will change. While our lives may not be perfect, we want to tell you that someday it will get better. Here you can read our stories. Here you can read that you're not alone.</p>
     </main>
 
     <footer>
