--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <header>
     <h1>Cedarville Out</h1>
     <nav>
-        <a href="about2.html">About</a>
+        <a href="about.html">About</a>
         <a href="stories.html">Stories</a>
         <a href="theology.html">Theology</a>
         <a href="resources.html">Resources</a>
