--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <h1>Cedarville Out</h1>
     <nav>
         <a href="about.html">About</a>
-        <a href="stories.html">Stories</a>
+        <a href="listofstories.html">Stories</a>
         <a href="theology.html">Theology</a>
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact Us</a>
