--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     <nav>
         <a href="about.html">About</a>
         <a href="stories.html">Stories</a>
-        <a href=>Theology</a>
+        <a href="theology.html">Theology</a>
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact Us</a>
     </nav>
