--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
         <a href="resources.html">Resources</a>
         <a href="stories.html">Stories</a>
         <a href="contact.html">Contact Us</a>
+        <a href="vent.html">The Ventriloquist Archives</a>
     </nav>
 </header>
 
