--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <a href="theology.html">Theology</a>
         <a href="resources.html">Resources</a>
         <a href="contact.html">Contact Us</a>
+        <a href="vent.html">The Ventriloquist Archives</a>
     </nav>
 </header>
 
