--- a/vent.html
+++ b/vent.html
@@ -134,7 +134,7 @@
     </div>
 
     <div class="info-box">
-        <div class="info-title" onclick="toggleInfo(event)">Issue 4</div>
+        <div class="info-title" onclick="toggleInfo(event)">Issue 4 - October 2011</div>
         <div class="info-content">
 		<a href="1October2011.html" class="story-link">The Attack of the Giant Octopus</a><br>
 		<a href="2October2011.html" class="story-link">Good Thing I Got a Pell Grant</a><br>
